fix highlighting for the menu on the top and other design alignments

--- a/src/main/webapp/resources/css/base.css
+++ b/src/main/webapp/resources/css/base.css
@@ -48,3 +48,7 @@ table {
     white-space: nowrap;
     width: auto !important;
 }
+
+.hidden {
+    display: none;
+}
